--- a/hire/templates/new.html
+++ b/hire/templates/new.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add A Convention</title>
 </head>
 <body>
-    <p><a href="/logout">Logout</a> | <a href="/dashboard">DashBoard</a>
-    <h1>New Trip</h1>
+    <p><a href="/logout">Logout</a> | <a href="/profile">Profile</a>
+    <h1>Lets Add a New Convention</h1>
 
     {% if messages %}
     <ul class='messages'>
