--- a/hire/templates/profile.html
+++ b/hire/templates/profile.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <title>Success</title>
 </head>
 <body>
@@ -25,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for trip in trips %}
+        {% for con in cons %}
             <tr>
                 <td>{{con.id}}</td>
                 <td>{{con.destination}}</td>
