--- a/hire/templates/index.html
+++ b/hire/templates/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <title>Login and Register</title>
 </head>
 <body>
@@ -26,32 +28,37 @@
                         <label for="first_name">First Name</label>
                         <input type="text" name ='first_name' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="last_name">Last Name</label>
                         <input type="text" name = 'last_name' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="user_name">User Name</label>
                         <input type="text" name = 'use_name' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="text" name = 'email' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" name = 'password' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="confirm_password">Confirm Password</label>
                         <input type="password" name = 'confirm_password' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <button class='btn btn-primary' type="submit">Register</button>
                     </div>
                 </form>
             </div>
-
             <div class="col-5">
                 <h1>Log In</h1>
                 <form action="/login" method ='POST'>
@@ -60,10 +67,12 @@
                         <label for="email">Email</label>
                         <input type="text" name = 'email' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" name = 'password' required>
                     </div>
+                    <br>
                     <div class="form-group">
                         <button class='btn btn-primary' type="submit">Login</button>
                     </div>
